# research-polytechnic

./: CHANGELOG.md  README.md
.github/workflows/: build-and-release.yml
emu-test-suite/: Cargo.toml  Dockerfile  README.md
emu-test-suite/docs/: FRAMEWORK.md
emu-test-suite/local/: blink.sh  box64.sh  kubera.sh  qemu.sh
emu-test-suite/src/: box64.rs  c_based.rs  emulators.rs  icicle.rs  kubera.rs  main.rs  mwemu.rs  shellcode_based.rs  test_framework.rs  tests.rs  unicorn.rs
emu-test-suite/tests/: edges.c
report/report/: Makefile  report.bib  report.tex
report/report/src/: abstract.tex  architecture.tex  background.tex  conclusion.tex  implementation.tex  introduction.tex  planning.tex  problems.tex  results.tex  stateofart.tex
report/slides/: Makefile  slides.tex
