[package]
name = "emu-test-suite"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = {version="1.21.0", features = ["code_asm"]}
unicorn-engine = "2.1.1"
libc = "0.2"
portable-pty = "0.9.0"
icicle-vm = { git = "https://github.com/icicle-emu/icicle-emu" }
pcode = { git = "https://github.com/icicle-emu/icicle-emu" }
libmwemu = "0.23.8"
